@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
       package="net.yura.domination"
-      android:versionCode="65"
-      android:versionName="65"
+      android:versionCode="66"
+      android:versionName="66"
       android:installLocation="auto">
 
     <!-- android:targetSdkVersion 11 to hide the legacy menu button on tablets -->
